<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    

    <RadioGroup
        android:id="@+id/radioFaculties"
        android:layout_marginTop="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="3dp"
        android:paddingBottom="7dp"
        android:paddingTop="4dp" >

        <RadioButton
            android:id="@+id/radio_faculty_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_faculty_one"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_faculty_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_faculty_two"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_faculty_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_faculty_three"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_faculty_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_faculty_four"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_faculty_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_faculty_five"
            android:textSize="18sp" />
    </RadioGroup>

    <ImageView
        android:id="@+id/seperator"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/separator" />

    <LinearLayout
        android:id="@+id/btn_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ok_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Ok" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Cancel" />
    </LinearLayout>

</LinearLayout>